...
                      SwitchListTile(
                        secondary: Icon(
                          Icons.chat_bubble_outline_rounded,
                          color: Theme.of(context).primaryColor,
                        ),
                        title: const Text(
                          'Mesajlar',
                          style: TextStyle(
                            fontWeight: FontWeight.bold,
                            fontSize: 15,
                          ),
                        ),
                        subtitle: const Text(
...
